--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,112 @@
     width: 92.96px;
     height: 92.96px;
 }
+
+.call-now{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #FFFFFF;
+
+}
+
+.last-section{
+    background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url(./images/watch.png);
+    background-repeat: no-repeat;
+    margin: 130px 230px;
+    height: 200px;
+    padding: 59px 64px;
+    border-radius: 8px;
+    background-size: cover;
+    
+}
+
+.all-footer{
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-title{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+}
+
+.footer-dic{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+
+.contact-img1{
+    margin-right: 17px;
+}
+
+.subscribe{
+    margin-top: 130px;
+    margin-right: 229px;
+    margin-bottom: 31px;
+
+}
+
+footer{
+    background-color: black;
+    height: 577px;
+    color: white;
+}
+
+.my-footer{
+    margin: 130px 230px ;
+
+}
+
+.contact-img{
+    display: flex;
+    justify-content:flex-start; 
+    margin-top: 32px;
+}
+
+.email{
+    margin-top: 31px;
+    margin-bottom: 16px;
+    width: 325px;
+    height: 64px;
+    
+
+    font-size: 18px;
+    background: none;
+    color: #ffffff;
+    outline: auto;
+    border-radius: 5px;
+    padding-left: 10px;
+
+
+}
+
+
+.btn-subscribe{
+
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    
+
+    width: 170px;
+    height: 64px;
+    left: 1210px;
+    top: 578px;
+    background: #2600fc;
+    border-radius: 5px;
+    border: none;
+    margin-top: 32px;
+    
+
+}
+
+
+
+
+
