--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     font-family: 'Work Sans', sans-serif;
 
 }
-
+/* banner style  */
 .banner{
     background-image: url(./images/banner/banner3.png);
     background-position: 0%;
@@ -21,7 +21,7 @@
     
 }
 
-.m-header{
+.main-header{
     font-weight: 700;
     font-size: 65px;
     text-align: right;
@@ -29,7 +29,7 @@
     
 }
 
-.s-header{
+.sub-header{
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
@@ -38,7 +38,7 @@
     color: white;
 }
 
-
+/* button style  */
 .btn{
     text-align: right;
 }
@@ -61,7 +61,7 @@
     
 }
 
-
+/* first section style  */
 .section{
     margin-left: 206px;
     margin-top: 131px;
@@ -98,14 +98,27 @@
     color: #444343;
 }
 
-.checkbox{
+/* checkbox style  */
+.check-list{
     margin-top: 16px;
 
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
     color: #444343;
+
 }
+
+.checkbox{
+    height: 20px;
+    width: 20px;
+    accent-color: rgb(255, 255, 255);
+    background-color: #2600fc;
+    
+  
+}
+
+/* my plan section style  */
 
 .what-do-i-next{
     margin: 130px 230px ;
@@ -153,6 +166,8 @@
     height: 92.96px;
 }
 
+/* call now banner style  */
+
 .call-now{
     font-weight: 700;
     font-size: 40px;
@@ -161,7 +176,8 @@
 
 }
 
-.last-section{
+.call-now-banner{
+    /* add gradient color on image  */
     background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url(./images/watch.png);
     background-repeat: no-repeat;
     margin: 130px 230px;
@@ -171,6 +187,8 @@
     background-size: cover;
     
 }
+
+/* footer style  */
 
 .all-footer{
     display: flex;
@@ -220,6 +238,7 @@ footer{
 }
 
 .email{
+    /* add email input style  */
     margin-top: 31px;
     margin-bottom: 16px;
     width: 325px;
@@ -228,15 +247,16 @@ footer{
 
     font-size: 18px;
     background: none;
-    color: #ffffff;
+    border: 1px;
     outline: auto;
-    border-radius: 5px;
+    color: #ffffff;
+    border-radius: 8px;
     padding-left: 10px;
 
 
 }
 
-
+/* subscribe button style  */
 .btn-subscribe{
 
     color: #ffffff;
@@ -250,11 +270,8 @@ footer{
     left: 1210px;
     top: 578px;
     background: #2600fc;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
-    margin-top: 32px;
-    
-
 }
 
 
